[package]
name = "quinn-noise"
version = "0.4.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "quinn noise implementation."
repository = "https://github.com/ipfs-rust/quinn-noise"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1.5.0"
curve25519-dalek = "4.1.0"
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
quinn-proto = { version = "0.10.6", default-features = false, features = ["ring"] }
rand_core = "0.6.4"
ring = "0.17.7"
sha2 = "0.10.8"
subtle = "2.4.0"
tracing = "0.1.26"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
xoodoo = "0.1.0"

[dev-dependencies]
anyhow = "1"
hdrhistogram = { version = "7.2", default-features = false }
quinn = "0.10"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
rand = "0.8"
