[package]
name = "noise-protocol-quinn"
version = "0.1.0"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
edition = "2021"
description = "Noise_IK_25519_ChaChaPoly_BLAKE3 QUIC encryption impl for quinn"
repository = "https://github.com/conradludgate/quinn-noise"
license = "MIT OR Apache-2.0"

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive", "extern_crate_std"] }
bytes = "1.5.0"
noise-protocol = "0.2.0"
quinn-proto = { version = "0.10.6", default-features = false }
ring = "0.17.7"

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hdrhistogram = { version = "7.2", default-features = false }
noise-ring = "0.2.0"
noise-rust-crypto = "0.6.2"
quinn = "0.10"
rand_core = "0.6.4"
tokio = { version = "1", features = ["full"] }
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
zeroize = "1.7.0"
